  There	is an interface to Lapack in lapack_calls.
- added support for logical constraints in binary variables and basic logical operators (and, or, not, equal) to AMPL .nl reader
- new diving heuristic indicatordiving that focuses on indicator variables which control semicontinuous variables

Performance improvements
------------------------

- Variable conflict-based addition of Schreier-Sims cuts for symmetry handling in prop_symmetry.c does no longer use
  an expensive explicit conflict graph construction.

Examples and applications
-------------------------

Interface changes
-----------------

### New and changed callbacks

### Deleted and changed API methods

- SCIPtpiInitLock(), SCIPtpiDestroyLock(), SCIPtpiInitCondition(), SCIPtpiDestroyCondition() now take a double
  pointer to SCIP_LOCK/SCIP_CONDITION, respectively.
- Renamed SCIPtpiSumbitJob() to SCIPtpiSubmitJob().
- Replaced SCIPnlrowSetCurvature() by SCIPsetNlRowCurvature().

### New API functions

- new functions for interfacing with Lapack:
  SCIPlapackIsAvailable(), SCIPlapackIsAvailable(),
  SCIPlapackComputeEigenvalues(), and SCIPlapackSolveLinearEquations

  These functions should be used instead of SCIPisIpoptAvailableIpopt(), SCIPcallLapackDsyevIpopt(), and
  SCIPsolveLinearEquationsIpopt() in the context of computing eigenvalues or solving linear equations. If IPOPT is available,
  the calls will be passed on.
- SCIPmultiplyBySumExprSum(), SCIPpowerExprSum()
- SCIPsetParam()
- SCIPgetPrimalDualIntegral() returns the primal dual integral stored in the statistics

### Command line interface

- Added optional parameter -i when calling SCIP in AMPL-mode (-AMPL parameter).
  If -i is specified, a SCIP shell is started where normally SCIPsolve() would be called.

### Interfaces to external software

- Added interface to Lapack (used for solving nonlinear problems).
- The AMPL interface now supports parameters specified in AMPL command scripts via option scip_options.